--- a/messenger-chat/tsconfig.json
+++ b/messenger-chat/tsconfig.json
@@ -22,6 +22,14 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/lib/userSchema.js",
+    "app/lib/conversationSchema.js",
+    "app/api/auth/[...nextauth].js"
+  ],
   "exclude": ["node_modules"]
 }
