--- a/messenger-chat/package.json
+++ b/messenger-chat/package.json
@@ -13,11 +13,13 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.1",
     "@types/next-auth": "^3.15.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
@@ -30,6 +32,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.10.1",
-    "typescript": "5.2.2"
+    "react-toastify": "^9.1.3",
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.2.2",
+    "zod": "^3.22.2"
   }
 }
