--- a/messenger-chat/tsconfig.json
+++ b/messenger-chat/tsconfig.json
@@ -27,8 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/lib/userSchema.js",
-    "app/lib/conversationSchema.js",
+    "lib/userSchema.js",
+    "lib/conversationSchema.js",
     "app/api/auth/[...nextauth].js"
   ],
   "exclude": ["node_modules"]
